# CMakeList.txt : CMake project for MonetDLiteJava, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

add_definitions(-DLIBGDK -DLIBMAL -DLIBOPTIMIZER -DLIBSTREAM -DLIBSQL -DHAVE_EMBEDDED -DHAVE_EMBEDDED_JAVA)

if (WIN32)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_CRT_SECURE_NO_WARNINGS -DMONETDBLITE_COMPILE")
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -D_CRT_SECURE_NO_WARNINGS -DMONETDBLITE_COMPILE -DNDEBUG")
elseif (UNIX OR APPLE)
    set(CMAKE_C_FLAGS_DEBUG "-g -O0 -fPIC -Wfatal-errors -Wall -Wextra -Werror -Wmissing-prototypes -Wold-style-definition")
    set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC -Wfatal-errors -Wall -DNDEBUG")
endif()

if(NOT(WIN32 OR UNIX OR APPLE))
    message( FATAL_ERROR "MonetDBLite is only available to Windows, Linux and MacOS X" )
endif()

find_package(BISON)
BISON_TARGET(BisonOutput ${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/server/sql_parser.y ${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/server/sql_parser.tab.c
            COMPILE_FLAGS "-y -d -p sql --report=none"
            DEFINES_FILE ${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/server/sql_parser.tab.h)

set(SQLSCRIPTS                 "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/09_like.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/10_math.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/11_times.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/13_date.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/15_querylog.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/16_tracelog.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/17_temporal.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/18_index.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/20_vacuum.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/21_dependency_functions.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/22_clients.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/25_debug.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/26_sysmon.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/27_rejects.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/39_analytics.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/41_md5sum.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/51_sys_schema_extension.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/75_storagemodel.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/80_statistics.sql")
set(SQLSCRIPTS "${SQLSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/sql/scripts/99_system.sql")

set(MALSCRIPTS                 "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/aggr.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/algebra.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/bat5.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/batExtensions.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/batmmath.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/batmtime.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/batstr.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/blob.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/group.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/iterator.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/language.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/mal_init.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/manifold.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/mat.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/mkey.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/mmath.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/mtime.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/orderidx.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/pcre.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/sample.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/str.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/tablet.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/optimizer/optimizer.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_bte.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_dbl.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_flt.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_int.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_lng.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_aggr_sht.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_decimal.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_inspect.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_rank.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sql_transaction.mal")
set(MALSCRIPTS "${MALSCRIPTS}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/sqlcatalog.mal")

set(MALAUTO              "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/01_batcalc.mal")
set(MALAUTO "${MALAUTO}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/modules/01_calc.mal")
set(MALAUTO "${MALAUTO}" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/mal/sqlbackend/40_sql.mal")

if (EXISTS "${CMAKE_SOURCE_DIR}/build/inlines")
    file(REMOVE_RECURSE "${CMAKE_SOURCE_DIR}/build/inlines")
endif()
file(MAKE_DIRECTORY     "${CMAKE_SOURCE_DIR}/build/inlines")
file(MAKE_DIRECTORY     "${CMAKE_SOURCE_DIR}/build/inlines/createdb")
file(MAKE_DIRECTORY     "${CMAKE_SOURCE_DIR}/build/inlines/autoload")
file(COPY ${MALSCRIPTS} DESTINATION "${CMAKE_SOURCE_DIR}/build/inlines")
file(COPY ${MALAUTO}    DESTINATION "${CMAKE_SOURCE_DIR}/build/inlines/autoload")
file(COPY ${SQLSCRIPTS} DESTINATION "${CMAKE_SOURCE_DIR}/build/inlines/createdb")

add_custom_target(inlines 
        COMMAND python "${CMAKE_SOURCE_DIR}/src/monetdblite/src/embedded/inlined_scripts.py" "${CMAKE_SOURCE_DIR}/build/inlines" "${CMAKE_SOURCE_DIR}/src/monetdblite/src/embedded/inlined_scripts.c")

set(INCLUDESDIRS )
list(APPEND INCLUDESDIRS src/monetdblite/src)
if (WIN32)
    list(APPEND INCLUDESDIRS src/monetdblite/src/windows)
endif()
list(APPEND INCLUDESDIRS src/monetdblite/src/common)
list(APPEND INCLUDESDIRS src/monetdblite/src/gdk)
list(APPEND INCLUDESDIRS src/monetdblite/src/mal/mal)
list(APPEND INCLUDESDIRS src/monetdblite/src/mal/modules)
list(APPEND INCLUDESDIRS src/monetdblite/src/mal/optimizer)
list(APPEND INCLUDESDIRS src/monetdblite/src/mal/sqlbackend)
list(APPEND INCLUDESDIRS src/monetdblite/src/sql/include)
list(APPEND INCLUDESDIRS src/monetdblite/src/sql/common)
list(APPEND INCLUDESDIRS src/monetdblite/src/sql/server)
list(APPEND INCLUDESDIRS src/monetdblite/src/sql/storage)
list(APPEND INCLUDESDIRS src/monetdblite/src/sql/storage/bat)
list(APPEND INCLUDESDIRS src/monetdblite/src/embedded)
list(APPEND INCLUDESDIRS src/embeddedjava)

include_directories(${INCLUDESDIRS})

set(SOURCEFILES )
list(APPEND SOURCEFILES src/monetdblite/src/monetdb_config.h)
if (WIN32)
    list(APPEND INCLUDESDIRS src/monetdblite/src/windows/dirent.h)
endif()
list(APPEND SOURCEFILES src/monetdblite/src/embedded/undef.h)
list(APPEND SOURCEFILES src/monetdblite/src/common/mutils.h)
list(APPEND SOURCEFILES src/monetdblite/src/common/stream.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_posix.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_atoms.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_utils.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_system.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_calc_compare.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_private.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_system_private.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_calc_private.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_bbp.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_calc.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_hash.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_cand.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_qsort_impl.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_ssort_impl.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_delta.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_atomic.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_tm.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_imprints.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_storage.h)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_logger.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_dataflow.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_interpreter.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_builder.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_import.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_stack.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_resolve.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_runtime.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_function.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_private.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_scenario.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_linker.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_listing.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_errors.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_type.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_exception.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_namespace.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_client.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_atom.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_session.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_module.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_parser.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_instruction.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_utils.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mmath.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/tablet.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batmmath.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/bat5.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/group.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/manifold.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batExtensions.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mat.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/sample.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/blob.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mtime.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/orderidx.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/language.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/algebra.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/str.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/projectionpath.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/iterator.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mkey.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_mitosis.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_garbageCollector.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_projectionpath.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_aliases.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_profiler.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_costModel.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_constants.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_mergetable.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_macro.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_pipes.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_evaluate.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_deadcode.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_candidates.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_matpack.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_generator.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_inline.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_pushselect.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_prelude.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_multiplex.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_reorder.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_support.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_emptybind.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_commonTerms.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_dataflow.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_remap.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/optimizer.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_coercion.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/optimizer_private.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_gencode.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_statement.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_orderidx.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_assert.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cast_impl_down_from_flt.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_user.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_upgrades.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_execute.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cat.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_statistics.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cast_impl_up_to_flt.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_transaction.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_round_impl.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/mal_backend.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_optimizer.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/rel_bin.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_fround_impl.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cast.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_result.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_scenario.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cast_impl_int.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_rank.h)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_keyword.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_mem.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_list.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_query.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_hash.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_relation.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_catalog.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/include/sql_stack.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_backend.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_types.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_string.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_select.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_planner.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_dump.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_parser.tab.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_sequence.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_privileges.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_semantic.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_atom.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_exp.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_mvc.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_rel.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_optimizer.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_psm.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_xml.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_symbol.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_datetime.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_parser.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_prop.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_semantic.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_schema.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_updates.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_remote.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_scan.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_decimal.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_trans.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_distribute.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_partition.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_qc.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_env.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/store_sequence.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/sql_storage.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/store_dependency.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_utils.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_table.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_storage.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_logger.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/nop_logger.h)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/res_table.h)
list(APPEND SOURCEFILES src/monetdblite/src/embedded/embedded.h)
list(APPEND SOURCEFILES src/embeddedjava/jni.h)
list(APPEND SOURCEFILES src/embeddedjava/embeddedjvm.h)
list(APPEND SOURCEFILES src/embeddedjava/jresulset.h)
list(APPEND SOURCEFILES src/embeddedjava/javaids.h)
list(APPEND SOURCEFILES src/embeddedjava/converters.h)
list(APPEND SOURCEFILES src/embeddedjava/checknulls.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_jdbc_EmbeddedDataBlockResponse.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_resultset_QueryResultSet.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_mapping_NullMappings.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedConnection.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedPreparedStatement.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_tables_MonetDBTable.h)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedDatabase.h)
list(APPEND SOURCEFILES src/monetdblite/src/embedded/embedded.c)
list(APPEND SOURCEFILES src/monetdblite/src/common/stream.c)
list(APPEND SOURCEFILES src/monetdblite/src/common/mutils.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_aggr.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_align.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_atoms.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_bat.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_batop.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_bbp.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_calc.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_cross.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_delta.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_firstn.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_group.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_hash.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_heap.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_imprints.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_join.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_logger.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_orderidx.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_posix.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_project.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_qsort.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_sample.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_search.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_select.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_ssort.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_storage.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_system.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_tm.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_unique.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_utils.c)
list(APPEND SOURCEFILES src/monetdblite/src/gdk/gdk_value.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_atom.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_builder.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_client.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_dataflow.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_exception.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_function.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_import.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_instruction.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_interpreter.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_linker.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_listing.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_module.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_namespace.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_parser.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_resolve.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_runtime.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_scenario.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_session.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_stack.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_type.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/mal/mal_utils.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/aggr.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/algebra.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/bat5.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batcalc.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batExtensions.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batmmath.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/batstr.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/blob.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/calc.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/group.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/iterator.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/language.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/manifold.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mat.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mkey.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mmath.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/mtime.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/orderidx.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/pcre.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/projectionpath.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/sample.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/str.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/modules/tablet.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_aliases.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_candidates.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_coercion.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_commonTerms.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_constants.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_costModel.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_dataflow.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_deadcode.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_emptybind.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_evaluate.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_garbageCollector.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_generator.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_inline.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_macro.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_matpack.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_mergetable.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_mitosis.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_multiplex.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_pipes.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_prelude.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_profiler.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_projectionpath.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_pushselect.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_remap.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_reorder.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_support.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/opt_wrapper.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/optimizer/optimizer.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/mal_backend.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/rel_bin.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_assert.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_bat2time.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cast.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_cat.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_execute.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_fround.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_gencode.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_optimizer.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_orderidx.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_rank.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_result.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_round.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_scenario.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_statement.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_statistics.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_transaction.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_upgrades.c)
list(APPEND SOURCEFILES src/monetdblite/src/mal/sqlbackend/sql_user.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_backend.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_changeset.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_hash.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_keyword.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_list.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_mem.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_stack.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_string.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/common/sql_types.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_distribute.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_dump.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_exp.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_optimizer.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_partition.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_planner.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_prop.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_psm.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_rel.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_remote.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_schema.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_select.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_semantic.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_sequence.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_trans.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_updates.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/rel_xml.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_atom.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_datetime.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_decimal.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_env.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_mvc.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_parser.tab.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_privileges.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_qc.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_scan.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_semantic.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/server/sql_symbol.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_logger.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_storage.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_table.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/bat_utils.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/nop_logger.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/bat/res_table.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/sql_catalog.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/store.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/store_dependency.c)
list(APPEND SOURCEFILES src/monetdblite/src/sql/storage/store_sequence.c)
list(APPEND SOURCEFILES src/embeddedjava/converters.c)
list(APPEND SOURCEFILES src/embeddedjava/checknulls.c)
list(APPEND SOURCEFILES src/embeddedjava/embeddedjvm.c)
list(APPEND SOURCEFILES src/embeddedjava/javaids.c)
list(APPEND SOURCEFILES src/embeddedjava/jresultset.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedConnection.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedDatabase.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_env_MonetDBEmbeddedPreparedStatement.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_jdbc_EmbeddedDataBlockResponse.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_mapping_NullMappings.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_resultset_QueryResultSet.c)
list(APPEND SOURCEFILES src/embeddedjava/nl_cwi_monetdb_embedded_tables_MonetDBTable.c)

add_library(monetdb5 SHARED ${SOURCEFILES})

add_dependencies(monetdb5 inlines)

if (UNIX AND NOT(DEFINED ENV{CROSS_COMPILING}))
    set_target_properties(monetdb5 PROPERTIES LINK_FLAGS "-lm -lrt -ldl -lpthread")
elseif (APPLE OR DEFINED ENV{CROSS_COMPILING})
    set_target_properties(monetdb5 PROPERTIES LINK_FLAGS "-ldl -lpthread")
endif()
